# Codility

CyclicRotation/: .cproject  .gitignore  .project  CMakeLists.txt
CyclicRotation/src/: main.cpp
FrogJmp/: .cproject  .project
FrogJmp/src/: FrogJmp.cpp
OddOccurrencesInArray/: .cproject  .project
OddOccurrencesInArray/src/: OddOccurrencesInArray.cpp
PermMissingElem/: .cproject  .project
PermMissingElem/src/: PermMissingElem.cpp
TapeEquilibrium/: .cproject  .project
TapeEquilibrium/src/: TapeEquilibrium.cpp
